[package]
name = "tiberqueries"
version = "0.1.0"
edition = "2021"
authors = ["Aidan Bleser"]
description = "A lightweight ORM for Tiberius."
documentation = "https://github.com/ieedan/tiberqueries"
keywords = ["derive", "tiberius", "mssqlserver", "orm"]
license = "../LICENSE"
readme = "../README.md"
repository = "https://github.com/ieedan/tiberqueries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.12.2", features = ["chrono"] }
tokio = { version = "^1.37.0", features = ["full"], optional = true }
tokio-util = { version = "0.7.10", features = ["compat"], optional = true }
tiberqueries_derive = { path = "../tiberqueries_derive", optional = true }

[dev-dependencies]
tiberqueries_derive = { path = "../tiberqueries_derive" }

[features]
default = ["derive", "query"]
derive = ["tiberqueries_derive"]
query = ["tokio", "tokio-util"]
