[package]
name = "tiberqueries_derive"
version = "0.1.3"
edition = "2021"
authors = ["Aidan Bleser"]
description = "Derive implementation for trait FromRow"
documentation = "https://github.com/ieedan/tiberqueries"
keywords = ["derive", "tiberius"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ieedan/tiberqueries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tiberqueries_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
heck = "0.5.0"

[dev-dependencies]
tiberqueries = { path = "../tiberqueries" }
