[package]
name = "select_all"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberqueries = { path = "../../tiberqueries" }
tiberqueries_derive = { path = "../../tiberqueries_derive" }
tiberius = "0.12.2"